# geospatial-studio-toolkit

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .whitesource  404.html  CNAME  CODEOWNERS  CONTRIBUTING.md  LICENSE.txt  README.md  index.html  objects.inv
geospatial-studio-sdk/: CONTRIBUTING.md  GETTING_STARTED.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini
geospatial-studio-sdk/.github/workflows/: docs.yml
geospatial-studio-sdk/docs/: api.md  base_client.md  client.md  fine_tuning.md  index.md  inference.md  models.md  openapi.json  widgets.md
geospatial-studio-sdk/docs/examples/e2e-walkthroughs/: GeospatialStudio-Walkthrough-BurnScars.ipynb
geospatial-studio-sdk/docs/examples/fine-tuning/: 002-Upload-Complete-Tune-Artifacts.ipynb  003-Terratorch-Iterate.ipynb  004-Create-User-Defined-Tuning-Templates.ipynb
geospatial-studio-sdk/docs/examples/inference/: 002-Add-Precomputed-Examples.ipynb  003-Running-inferences-with-extra-pipeline-steps.ipynb
geospatial-studio-sdk/docs/examples/inference/assets/: add_layer_tif.json
geospatial-studio-sdk/docs/examples/sample_files/: example-terratorch-config.yaml
geospatial-studio-sdk/docs/examples/sample_files/tune-tasks/geotune-qokd9fqyuhxbgyyiuurpxu/201622622176987258/03e8ad57d953415f8c29f473e32e5e0a/: meta.yaml
geospatial-studio-sdk/docs/examples/sample_files/tune-tasks/geotune-qokd9fqyuhxbgyyiuurpxu/201622622176987258/0fa9e4f1f90a4e6bb548f5090331a634/artifacts/: results_table.json
geospatial-studio-sdk/docs/examples/sample_files/tune-tasks/geotune-qokd9fqyuhxbgyyiuurpxu/201622622176987258/2e5f1ac663f14fad8a615538a9ec6db2/metrics/: lr-AdamW
geospatial-studio-sdk/docs/examples/sample_files/tune-tasks/geotune-qokd9fqyuhxbgyyiuurpxu/201622622176987258/2e5f1ac663f14fad8a615538a9ec6db2/tags/: mlflow.parentRunId  mlflow.runName
geospatial-studio-sdk/docs/examples/sample_files/tune-tasks/geotune-qokd9fqyuhxbgyyiuurpxu/201622622176987258/722793af47d143e6967dbb69d812d42b/: meta.yaml
geospatial-studio-sdk/docs/examples/sample_files/tune-tasks/geotune-qokd9fqyuhxbgyyiuurpxu/201622622176987258/722793af47d143e6967dbb69d812d42b/params/: lr
geospatial-studio-sdk/geostudio/: __init__.py  auth.py  config.py  exceptions.py  gswidgets.py  session.py
geospatial-studio-sdk/geostudio/backends/: __init__.py  base_client.py  main.py
geospatial-studio-sdk/geostudio/backends/v2/ginference/: __init__.py  client.py  models.py
geospatial-studio-sdk/geostudio/backends/v2/gtune/: client.py  models.py
geospatial-studio-sdk/scripts/: docs.py
(+306 files in other folders)
